apps/jenkins/helm-jenkins-source.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: jenkins
    labels:
      prometheus: scrape
