apps/jenkins/jenkins-aur-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: repo-ingress
    namespace: jenkins
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-ovh
        kubernetes.io/ingress.class: nginx
    labels:
        app: my-repo
spec:
    rules:
        - host: ENC[AES256_GCM,data:88hMgiw0HhmzHQjioNQez9+cdNqa,iv:79gAgFSkVDV9BN7fhlnm+On5Tk1Ffbwy/r5Kin02ad8=,tag:lYXbyHK4aH9z0TM9NVDBgQ==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: my-repo-svc
                        port:
                            number: 8080
                  pathType: Prefix
                  path: /
    tls:
        - hosts:
            - ENC[AES256_GCM,data:x1slO6otWn0rJpw5N2r6UCs4wO/A,iv:gylKUzz0iKkNEVWjuUiw9oGNah88w+oXhPaORQv5v74=,tag:6+OM9Rr2Fpk62f5ydw8DMg==,type:str]
          secretName: repo-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-01-08T18:37:30Z"
    mac: ENC[AES256_GCM,data:tDK4RDHJBmspw8eD545l9PXok6WEGx6hIl3FGhTYkugqmUfk7qM1ymTkOPa/dkhEC29ulQX8p3hFXGWFfaOkuEeXqDS284grwTK2TYyADnMBzEHedXzzq9gEcP+XBXu4ejcwrwCZmnJ7+ju5U/MbtNPYjPAK4LskTAFWMKkd468=,iv:uaT4UxZY39SvrkzX7DsOf5MzjKd04q+QS7FqX/MyRDM=,tag:oMOF9RZ1oe0ss3GwpwltLw==,type:str]
    pgp:
        - created_at: "2022-01-08T18:35:12Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ//RLjkaq1FS/LvW+XaMuhPme6g4AqRMbjKEPETeN3X1oQL
[...]
            Fq/+aeeDNktfumk7eoEZSo8vzN3y7qNv/JvjeF6C0UIh
            =/IBf
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(data|stringData|consumerKey|email|groupName|applicationKey|host|hosts|server|dnsNames)$
    version: 3.7.1
