apps/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jenkins
    namespace: jenkins
    annotations:
        kubernetes.io/ingress.class: nginxinc
        nginx.org/websocket-services: jenkins-operator-http-jenkins
        cert-manager.io/cluster-issuer: letsencrypt-ovh
    labels:
        app: jenkins
spec:
    rules:
        - host: ENC[AES256_GCM,data:/YO/4FiAAt3Wptlszp+E8I6gfzDZfQ==,iv:jTKnga7B/EU6TiZ4vTVqT2xKLbH1VgOmBtqLeyW/w0Y=,tag:nbh0a6u2Oie5ohRQriV1Dg==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: jenkins-operator-http-jenkins
                        port:
                            number: 8080
                  path: /
                  pathType: Prefix
                - backend:
                    service:
                        name: not-exist
                        port:
                            number: 8080
                  path: /prometheus/
                  pathType: Prefix
    tls:
        - hosts:
            - ENC[AES256_GCM,data:1vYp9il7r71Z5ad0/ufNVJtiRntASw==,iv:V+cCDUfA1un5tBW4yZ8+FNyB3TXVL9Zpw0a6MTiDIdE=,tag:Er3H6JcbQTKhy4hEKqmKwA==,type:str]
          secretName: jenkins-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2025-05-11T16:28:29Z"
    mac: ENC[AES256_GCM,data:bvpgp+8jQoCF4MXLDHRrSbjj4sCPos6Z7NJdbXWirqk5WpUYsarzPVDIUwaYZHeZF16Vi9aNDCQlHGXAqoSqsIlOD1eo84dzyH3TcJea9KkEDo+mJrGCacunTVMvDvi99n3HIEh88nIQ8+hp9EziQcWf3oxH2PUBP/92StnRyi8=,iv:vPZ15395KChmJE1kuLLVq2/keF7YDBNwcKD4MRFQoBY=,tag:cZsPuxzxueOBueUVBa+1yw==,type:str]
    pgp:
        - created_at: "2021-11-21T10:53:29Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ/+PAb06fQ4cnLEn8bCfxMPN+6F7GSQEVShpxxlWmyooOne
[...]
            RP7vnl6wiu/e29Ep/Hvpws9JCUPXBOxPy97JlqQaeIa9
            =Qp6/
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(data|stringData|consumerKey|email|groupName|applicationKey|host|hosts|server|dnsNames)$
    version: 3.9.0
